--- a/url/src/main/resources/templates/index.html
+++ b/url/src/main/resources/templates/index.html
@@ -5,26 +5,28 @@
   		<meta charset="utf-8"/>
   		<meta name="viewport" content="width=device-width, initial-scale=1"/>
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		<script src="main.js" type="text/javascript"></script>
+		<link href="/url.css" rel="stylesheet"/>
 	</head>
 	<body>
 		<div class="container">
 		<BR/><BR/><BR/>
 	  		<div class="card">
-	  		 <div class="card-header">  ShorteURL</div>
-	  		 <div class="card-body">
-	  		<form>
-			<div class="form-group">
-      			<label for="shorturltext">Short URL:</label>
-      			<input type="text" id="shorturltext" class="form-control" name="shorturltext" maxlength="255"/>
-    		</div>
-    		<button type="button" class="btn btn-primary">Click here to get Short URL</button>
-    		</form>
-    		</div>
+		  		 <div class="card-header">  Short URL</div>
+		  		 <div class="card-body">
+			  		<form>
+					<div class="form-group">
+		      			<label for="shorturltext">Short URL:</label>
+		      			<input type="text" id="shorturltext" class="form-control" name="shorturltext" maxlength="255"/>
+		    		</div>
+		    		<button type="button" class="btn btn-primary">Click here to get Short URL</button>
+		    		</form>
+	    		</div>
+	    		<div id="invalidUrl" name="invalidUrl"></div>
     		</div>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
